pod-1-affinity.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-1
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    app: pod-1-label
  namespace: ns-1
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: node-affinity-key
            operator: In
            values:
            - node-1
  containers:
  - name: nginx
    image: nginx
