block-ns-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-ns-2
  namespace: ns-2
spec:
  podSelector:
    matchLabels:
      app: pod-2-lables
  policyTypes:
  - Ingress
  ingress: []
