network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-1-lablel-ingress-deny
  namespace: ns-1
spec:
  podSelector:
    matchLabels:
      app: pod-1-label
  policyTypes:
  - Ingress
